<resources>
    <string name="app_name">Pick Me</string>
    <string name="success">success</string>
    <string name="user_name">User Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="title_profile">Profile</string>
    <string name="infoString">Biograghy Info</string>
    <string name="CarModelString">Car model</string>
    <string name="CarColorString">Car color</string>
    <string name="RateString">User Rate</string>
    <string name="dobString">DOB</string>
    <string name="TripsString">Last Trips</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_search_users">Find User</string>
    <string name="search_by_username">Search By Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name1">Last Name</string>
    <string name="age">Age</string>
    <string name="add_car_photo">add your car photo</string>
    <string name="model">car model</string>
    <string name="plate_numer">plate number</string>
    <string name="car_year">car year</string>
    <string name="select_brand">select brand</string>
    <string name="Do_you_have_acar">Do you have a car</string>
    <string name="bio_hint">Biograghic info</string>
    <string name="phone_hint_post">(11) 4761 1986</string>
    <string name="phone_hint_pre">+20</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="transition_user_list_to_profile">transitionUserListToProfile</string>
    <string name="transition_user_list_to_profile_picture">transitionUserListToProfilePicture</string>
    <string name="transition_user_list_to_profile_name">transitionUserListToProfileName</string>
    <string name="transition_fab_to_edit">transitionFabToEdit</string>
    <string name="title_messages">Messages</string>
    <string name="title_create_community">Communities</string>
    <string name="create">Create</string>
    <string name="title_communities">Communities</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_communities">My Communities</string>
    <string name="join">Join</string>
    <string name="joined">Joined</string>
    <string name="search_community">Search Communities</string>
    <string name="title_request_to_join">Join Request</string>
    <string name="send">Send</string>
    <string name="comm_name">Community Name</string>
    <string name="add_community">Add Community</string>
    <string name="add">Add</string>
    <string name="info">info</string>
    <string name="description">Community description</string>

</resources>
