<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:minHeight="180.0dip">
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/carInfoNoCarPhotoLL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <TextView
                    android:textSize="18.0sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_car_photo"
                    android:drawableTop="@drawable/car1"
                    android:drawablePadding="10.0dip" />
            </LinearLayout>
            <ImageView
                android:id="@+id/CarPhoto"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:scaleType="fitXY"
                android:adjustViewBounds="true" />
        </RelativeLayout>
        <Spinner
            android:layout_gravity="center_horizontal"
            android:entries="@array/carbrand"
            android:textSize="15.0sp"
            android:gravity="center_vertical"
            android:id="@+id/CarBrand"


            android:background="@drawable/rounded_bg_white"
            android:padding="10.0dip"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_marginTop="10.0dip"
            android:hint="@string/select_brand"
              />
        <EditText
            android:id="@+id/CarModel"
            android:padding="10.0dip"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_marginTop="10.0dip"
            android:hint="@string/model"
            android:maxLength="14" />
        <EditText
            android:id="@+id/CarYear"
            android:padding="10.0dip"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_marginTop="10.0dip"
            android:hint="@string/car_year"
            android:maxLength="14" />
        <EditText
            android:id="@+id/CarPlate"
            android:padding="10.0dip"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_marginBottom="10.0dip"
            android:hint="@string/plate_numer"
            android:maxLength="14" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15.0sp"
            android:text="Air conditioned"
            android:id="@+id/Aircondition" />
    </LinearLayout>


</LinearLayout>