<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/content"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/layout_toolbar" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ScrollView
            android:padding="10.0dip"
            android:scrollbars="none"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/rounded_corner"
                android:paddingBottom="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="130.0dip">
                    <ImageView
                        android:id="@+id/ProfilePic"
                        android:background="@drawable/profilepic"
                        android:layout_width="110.0dip"
                        android:layout_height="110.0dip"
                        android:scaleType="fitXY"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true" />
                </RelativeLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10.0dip"
                    android:layout_below="@id/ProfilePic">
                    <EditText
                        android:id="@+id/Name"
                        android:background="@drawable/rounded_bg_white"
                        android:paddingRight="10.0dip"
                        android:layout_width="fill_parent"
                        android:layout_height="50.0dip"
                        android:layout_marginBottom="10.0dip"
                        android:hint="@string/first_name"
                        android:maxLength="50"
                        android:drawableRight="@drawable/star_red"
                        android:inputType="textPersonName|textCapSentences" />
                    <EditText
                        android:id="@+id/Lastname"
                        android:background="@drawable/rounded_bg_white"
                        android:paddingRight="10.0dip"
                        android:layout_width="fill_parent"
                        android:layout_height="50.0dip"
                        android:layout_marginBottom="10.0dip"
                        android:hint="@string/last_name1"
                        android:maxLength="20"
                        android:drawableRight="@drawable/star_red"
                        android:inputType="textPersonName|textCapSentences" />
                    <EditText
                        android:id="@+id/Age"
                        android:background="@drawable/rounded_bg_white"
                        android:paddingRight="10.0dip"
                        android:layout_width="fill_parent"
                        android:layout_height="50.0dip"
                        android:hint="@string/age"
                        android:maxLength="20"
                        android:drawableRight="@drawable/star_red"
                        android:inputType="textPersonName|textCapSentences" />


                </LinearLayout>

                <EditText
                    android:id="@+id/Email"
                    android:paddingRight="10.0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="50.0dip"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:hint="@string/email"
                    android:maxLength="30"
                    android:drawableLeft="@drawable/envelop_purple"
                    android:drawableRight="@drawable/star_red"
                    android:drawablePadding="10.0dip"
                    android:inputType="textWebEmailAddress|textCapSentences" />
                <include layout="@layout/phonenumber" />
                <include layout="@layout/userbio" />
                <include layout="@layout/carinfo" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</LinearLayout>